Built a native image using graal vm - closes #6